--- a/demo/index.html
+++ b/demo/index.html
@@ -37,31 +37,27 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
 
     </script>
     <!--<script type="module" src="../node_modules/@webcomponents/webcomponentsjs/webcomponents-loader.js"></script>-->
-
-    <script type="module">
-      import './granite-bootstrap-example.js';
-    </script>
-
-    <script type="module">
-      import '@polymer/iron-demo-helpers/demo-pages-shared-styles';
-      import '@polymer/iron-demo-helpers/demo-snippet';
-    </script>
-
-    <custom-style>
-      <style is="custom-style" include="demo-pages-shared-styles">
-      </style>
-    </custom-style>
   </head>
 
   <body>
     <div class="vertical-section-container centered">
       <h3>granite-boostrap</h3>
-      <demo-snippet class="centered-demo">
-        <template>
-          <granite-bootstrap-example></granite-bootstrap-example>
-        </template>
-      </demo-snippet>
+      <div id="demo1"></div>
     </div>
+
+    <script type="module">
+      import { html, render } from 'lit-html';
+      import './granite-bootstrap-example.js';
+
+      render(
+        html`
+          <p>Here you have an example of a table rendered using bootstrap:</p>
+          
+          <granite-bootstrap-example></granite-bootstrap-example>
+        `,
+        document.querySelector('#demo1')
+      );
+    </script>
 
   </body>
 </html>
